--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>CAPTCHA 인증 - 해커모드</title>
+  <title>CAPTCHA 인증</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
